# api/http/object.go
@@ -22,6 +22,7 @@ func NewHandler(service usecases.Object) *Object {
 // @Tags task
 // @Produce json
 // @Param task_id path string true "Task id"
+// @Param Authorization header string true "Authorization token"
 // @Success 200 {object} types.GetResultObjectHandlerResponse
 // @Success 102 {string} string "Processing"
 // @Failure 400 {string} string "Bad request"
@@ -30,12 +31,9 @@ func NewHandler(service usecases.Object) *Object {
 // @Router /result/{task_id} [get]
 func (s *Object) getResultHandler(w http.ResponseWriter, r *http.Request) {
     req, err := types.CreateGetResultObjectHandlerRequest(r)
-
-    if err != nil {
-        http.Error(w, "Bad request", http.StatusBadRequest)
-        w.Write([]byte(err.Error()))
+    if err = types.ProcessCreateError(w, err); err != nil {
         return
-    }
+    }         
 
     value, err := s.service.GetTask(req.Key, req.SessionId)
     resp, err := types.CreateGetResultObjectHandlerResponse(value, err)
@@ -47,6 +45,7 @@ func (s *Object) getResultHandler(w http.ResponseWriter, r *http.Request) {
 // @Tags task
 // @Produce json
 // @Param task_id path string true "Task id"
+// @Param Authorization header string true "Authorization token"
 // @Success 200 {object} types.GetStatusObjectHandlerResponse
 // @Failure 400 {string} string "Bad request"
 // @Failure 404 {string} string "Object not found"
@@ -54,12 +53,9 @@ func (s *Object) getResultHandler(w http.ResponseWriter, r *http.Request) {
 // @Router /status/{task_id} [get]
 func (s *Object) getStatusHandler(w http.ResponseWriter, r *http.Request) {
     req, err := types.CreateGetStatusObjectHandlerRequest(r)
-
-    if err != nil {
-        http.Error(w, "Bad request", http.StatusBadRequest)
-        w.Write([]byte(err.Error()))
+    if err = types.ProcessCreateError(w, err); err != nil {
         return
-    }
+    }  
 
     value, err := s.service.GetTask(req.Key, req.SessionId)
     resp, err := types.CreateGetStatusObjectHandlerResponse(value, err)
@@ -72,44 +68,62 @@ func (s *Object) getStatusHandler(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce json
 // @Param duration body string true "Task duration"
-// @Success 201 {object} types.PostObjectHandlerResponse
+// @Param Authorization header string true "Authorization token"
+// @Success 201 {object} types.PostTaskObjectHandlerResponse
 // @Failure 400 {string} string "Bad request"
 // @Failure 404 {string} string "Object not found"
 // @Failure 500 {string} string "Internal error"
 // @Router /task [post]
 func (s *Object) postTaskHandler(w http.ResponseWriter, r *http.Request) {
     req, err := types.CreatePostTaskObjectHandlerRequest(r)
-    if err != nil {
-        http.Error(w, "Bad request", http.StatusBadRequest)
-        w.Write([]byte(err.Error()))
+    if err = types.ProcessCreateError(w, err); err != nil {
         return
-    }
+    }  
+
     value, err := s.service.PostTask(req.Dur, req.SessionId)
     resp, err := types.CreatePostTaskObjectHandlerResponse(value, err)
 
     types.ProcessError(w, err, resp)
 }
 
+// @Description post register
+// @Tags user
+// @Accept  json
+// @Produce json
+// @Param credentials body types.PostUserObjectHandlerRequest true "login and password"
+// @Success 201 {object} types.PostUserRegisterObjectHandlerResponse
+// @Failure 400 {string} string "Bad request"
+// @Failure 404 {string} string "Object not found"
+// @Failure 500 {string} string "Internal error"
+// @Router /register [post]
 func (s *Object) postRegisterHandler(w http.ResponseWriter, r *http.Request) {
     req, err := types.CreatePostUserObjectHandlerRequest(r)
-    if err != nil {
-        http.Error(w, "Bad request", http.StatusBadRequest)
-        w.Write([]byte(err.Error()))
+    if err = types.ProcessCreateError(w, err); err != nil {
         return
     }
+
     err = s.service.RegisterUser(req.Login, req.Password)
-    types.ProcessErrorPostUser(w, err, nil)
+    types.ProcessErrorPostUser(w, err, &types.PostUserRegisterObjectHandlerResponse{})
 }
 
+// @Description post login
+// @Tags user
+// @Accept  json
+// @Produce json
+// @Param credentials body types.PostUserObjectHandlerRequest true "login and password"
+// @Success 201 {object} types.PostUserLoginObjectHandlerResponse
+// @Failure 400 {string} string "Bad request"
+// @Failure 404 {string} string "Object not found"
+// @Failure 500 {string} string "Internal error"
+// @Router /login [post]
 func (s *Object) postLoginHandler(w http.ResponseWriter, r *http.Request) {
     req, err := types.CreatePostUserObjectHandlerRequest(r)
-    if err != nil {
-        http.Error(w, "Bad request", http.StatusBadRequest)
-        w.Write([]byte(err.Error()))
+    if err = types.ProcessCreateError(w, err); err != nil {
         return
     }
+
     value, err := s.service.LoginUser(req.Login, req.Password)
-    types.ProcessErrorPostUser(w, err, &types.PostUserObjectHandlerResponse{SessionId: value})
+    types.ProcessErrorPostUser(w, err, &types.PostUserLoginObjectHandlerResponse{SessionId: value})
 }
 
 // WithObjectHandlers registers object-related HTTP handlers.
